# juspreet51_pkg

./: readme.md  setup.cfg  setup.py  setup_temp.cfg
.ipynb_checkpoints/: README-checkpoint.md
juspreet51.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/example_package/: example.py
src/juspreet51/: __init__.py  greetings.py  metrics.py  visualizations.py  visuals.ipynb
src/juspreet51.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/juspreet51/.ipynb_checkpoints/: visuals-checkpoint.ipynb
src/juspreet51/demo_nbs/.ipynb_checkpoints/: draw_piechart-checkpoint.ipynb  plot_confusion_matrix-checkpoint.ipynb
