[metadata]
name = juspreet51
version = 0.0.6b4
author = Jaspreet Singh
author_email = contact@juspreet51.in
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/juspreet51/juspreet51_pkg
project_urls =
    Bug Tracker =https://github.com/juspreet51/juspreet51_pkg
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src